--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@ audio {
 <body>
 
 <h1>🎙️ Aakashvaani.AI</h1>
-<p>Free Hindi/English Voice Generator | Male/Female/Kid | 15 Moods</p>
+<p>Free Hindi/English Voice Generator | Natural Male Voice | 15 Moods</p>
 
 <form id="voiceForm">
     <textarea id="textInput" placeholder="Yahan text likho..."></textarea>
@@ -152,4 +152,4 @@ retryBtn.addEventListener("click", ()=>{
 </script>
 
 </body>
-    </html>
+</html>
